--- a/web/Login Maske (JSF).xhtml
+++ b/web/Login Maske (JSF).xhtml
@@ -54,14 +54,14 @@
 						<tr> 
                                                         <td></td>
 							<td> 
-                                                            <font color="red" size="2px"> <h:message  for="Username"></h:message></font>
+                                                             <h:message  for="Username" style="font-size:12px; color:red"></h:message>
                                                         </td>
                                                 </tr>
                                                 <tr>
                                                         <td> </td>
                             
 							<td> 
-                                                            <font color="red" size="2px"><h:message for="UserPassword"></h:message></font>
+                                                            <h:message for="UserPassword" style="font-size:12px; color:red"></h:message>
                                                         </td>   
                                                 </tr>
                                                 <tr>
