--- a/web/Ticket_Uebersicht_Student.xhtml
+++ b/web/Ticket_Uebersicht_Student.xhtml
@@ -2,7 +2,8 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:f="http://java.sun.com/jsf/core"> 
+      xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:c="http://xmlns.jcp.org/jsp/jstl/core"> 
 
     <h:head>
         <title>Ticketübersicht</title>
@@ -164,46 +165,22 @@
 							</tr>
 						</thead>
 						<tbody>
-							<tr>
-								<td>
-								[TICKET.id]
-								</td>
-								<td>
-								[TICKET.priority]
-								</td>
-								<td>
-								[TICKET.category]
-								</td>
-								<td>
-								[TICKET.status]
-								</td>
-								<td>
-								<img src="delete_icon.png" alt="delete"/>
-								</td>
-								<td>
-								<img src="edit_icon.png" alt="edit"/>
-								</td>
-							</tr>
-							<tr>
-								<td>
-								[TICKET.id]
-								</td>
-								<td>
-								[TICKET.priority]
-								</td>
-								<td>
-								[TICKET.category]
-								</td>
-								<td>
-								[TICKET.status]
-								</td>
-								<td>
-								<img src="delete_icon.png" alt="delete"/>
-								</td>
-								<td>
-								<img src="edit_icon.png" alt="edit"/>
-								</td>
-							</tr>
+                                                    <c:forEach var="row" items="${gui_TicketUebersicht.listOfTickets}">
+                                                    <tr>
+                                                        <c:forEach var="column" items="${row}">
+                                                            <td>
+                                                                ${column}
+                                                            </td>                                                            
+                                                        </c:forEach>
+                                                        <td>
+                                                            <img src="delete_icon.png" alt="delete"/>
+							</td>
+                                                        <td>
+                                                            <img src="edit_icon.png" alt="edit"/>
+                                                        </td>
+                                                    </tr>
+                                                    </c:forEach>
+							
 						</tbody>
 					</table>
 					
