--- a/web/Login Maske (JSF).xhtml
+++ b/web/Login Maske (JSF).xhtml
@@ -53,15 +53,8 @@
 						</tr>  
 						<tr> 
                                                         <td></td>
-							<td> 
-                                                             <h:message  for="Username" style="font-size:12px; color:red"></h:message>
-                                                        </td>
-                                                </tr>
-                                                <tr>
-                                                        <td> </td>
-                            
-							<td> 
-                                                            <h:message for="UserPassword" style="font-size:12px; color:red"></h:message>
+							<td>                                                       
+                                                            <h:messages style="font-size:12px; color:red"></h:messages>
                                                         </td>   
                                                 </tr>
                                                 <tr>
