Text auf Startseite hinzugefügt

--- a/web/Landing Page.xhtml
+++ b/web/Landing Page.xhtml
@@ -55,12 +55,13 @@
                                     <table>
                                         <tr>
                                             <td>
-                                                <h3>Willkommen im Ticketsystem der IUBH-Fernstudium</h3>
+                                                <h3>Willkommen im Ticketsystem der IUBH-Fernstudium</h3><br/>
                                             </td>
                                         </tr>
                                         <tr>
                                             <td>
-                                                Falls Sie Fragen zur Benutzung dieses Systems haben: [Verweis auf das Nutzerhandbuch]
+                                                Sie haben eine Frage zur Funktion dieses Ticketsystems? Bitte werfen Sie einen Blick in das mitgelieferte Nutzerhandbuch. <br/>
+                                                Sollte Ihre Frage darin nicht beantwortet wird, wenden Sie sich bitte an den IT Helpdesk der IUBH Fernstudium (it-helpdesk@iubh-fernstudium.de)
                                             </td>
                                         </tr>
                                     </table>
