--- a/web/Ticket_Uebersicht_TutorAdmin.xhtml
+++ b/web/Ticket_Uebersicht_TutorAdmin.xhtml
@@ -200,12 +200,14 @@
                                                             </c:forEach>
                                                            
 								<td>
-                                                                    <h:commandLink action="#{gui_TicketUebersichtTutor.DeleteTicket}">
+                                                                    <h:commandLink  action="#{gui_TicketUebersichtTutor.DeleteTicket}">
+                                                                        <f:param name="DelTicketID" value="#{row[0]}"></f:param>
                                                                         <img src="delete_icon.png" alt="delete"/>
                                                                     </h:commandLink>
 								</td>
 								<td>
                                                                     <h:commandLink action="#{gui_TicketUebersichtTutor.EditTicket}">
+                                                                        <f:param name="EditTicketID" value="#{row[0]}"></f:param> 
                                                                         <img src="edit_icon.png" alt="edit"/>
                                                                     </h:commandLink>
 								</td>
