Ticket Übersicht Student: - Verbindung zu Ticket bearbeiten Maske implementieren
Benutzerverwaltung:
- Verbindung zu Benutzer bearbeiten implementieren

Benutzer bearbeiten
- Kurszuordnung implementiert
- Wenn Username oder Email eingegeben wurde, Fehlermeldung und Abbruch der Speicherfunktion
- Wenn die Rolle nicht geändert wurde, Hinweis ausgeben

DBController.java
- neue Funktion UpdateDataWithInt eingefügt, mit der man Integer Werte einfügen kann ohne die '' (Wenn man z.B. den Wert null einfügen will)
- Funktion getData: Wenn 0 Zeilen gefunden werden, wird ein leeres Array zurückgeliefert, Fehlerbehandlung dafür in ManagdBeans eingebaut

Benutzer erfassen
- welche Kurse sollen einen neuen User zugeordnet werden können?
- initiales Passwort oder selbst eins eingeben?
- Kurszuordnung zur erlauben für Tutoren?

--- a/web/Ticket_Uebersicht_Student.xhtml
+++ b/web/Ticket_Uebersicht_Student.xhtml
@@ -195,8 +195,11 @@
                                                         <td>
                                                             <img src="delete_icon.png" alt="delete"/>
 							</td>
-                                                        <td>
-                                                            <img src="edit_icon.png" alt="edit"/>
+                                                        <td>                                                          
+                                                            <h:commandLink  action="#{gui_TicketUebersicht.editTicket()}">
+                                                                <f:param name="TicketID" value="#{row[0]}"></f:param>
+                                                                <img src="edit_icon.png" alt="edit"/>
+                                                            </h:commandLink>
                                                         </td>
                                                     </tr>
                                                     </c:forEach>
