--- a/web/Ticket_bearbeiten.xhtml
+++ b/web/Ticket_bearbeiten.xhtml
@@ -149,7 +149,7 @@
 						</tr> 
 						<tr>
 							<td> 
-                                                                <h:commandButton value="Abbrechen" action="#{gui_Ticketbearbeiten.Cancel}"></h:commandButton>
+                                                                <h:commandButton value="Abbrechen" action="Ticket_Uebersicht_Student.xhtml"></h:commandButton>
 							</td>           
 						</tr> 
                                                                                             <tr>
