Spaltenbreite Kommentarhistorie angepasst

--- a/web/Ticket_bearbeiten.xhtml
+++ b/web/Ticket_bearbeiten.xhtml
@@ -125,7 +125,7 @@
                                                 <td colspan="2"> <h3>Kommentar-Historie</h3> </td>					 
                                             </tr>	
                                             <tr>
-                                                <td><b>Datum</b></td>
+                                                <td width="15%"><b>Datum</b></td>
                                                 <td><b>Kommentar</b></td>
                                             </tr>                                             	                                            
                                             <c:forEach var="row" items="${gui_Ticketbearbeiten.worknoteNoteList}">
