--- a/web/Landing Page.xhtml
+++ b/web/Landing Page.xhtml
@@ -46,7 +46,7 @@
                                                 <td>
                                                 <h:commandButton value="Benutzerverwaltung" class="button"></h:commandButton>
                                                 <div class="divider"/>
-                                                <h:commandButton value="Ticketübersicht" class="button"></h:commandButton>
+                                                <h:commandButton value="Ticketübersicht" action="Ticket_Uebersicht_Student?faces-redirect=true&amp;includeViewParams=true"  class="button"></h:commandButton>
                                                 <div class="divider"/>
                                                 <h:commandButton value="Ticketerfassung" action="Erfassungsmaske_JSF?faces-redirect=true&amp;includeViewParams=true" class="button"></h:commandButton>                                                
                                                 </td>                                    
