--- a/web/User_bearbeiten.xhtml
+++ b/web/User_bearbeiten.xhtml
@@ -59,17 +59,23 @@
 					
                                         <table id="Rand_neu"  width="30%">
 						<tr>
-							<td width="15%">Username</td>   
+							<td width="20%">Username</td>   
 							<td>                                                             
                                                         <h:inputText style="width:100%;height:100%" value="#{gui_Userbearbeiten.name}" size="80" label="Name"></h:inputText>                                  
 							</td>   
                                                 </tr>								  
 						<tr>
-							<td width="15%" >Email</td> 
+							<td width="20%" >Email</td> 
 							<td>                                                             
                                                             <h:inputText style="width:100%;height:100%" value="#{gui_Userbearbeiten.email}" size="80" label="Email"></h:inputText>                                                      	 
 							</td>
-						</tr>								  
+						</tr>	
+                                                <tr>
+							<td width="20%" >neues Passwort</td> 
+							<td>                                                             
+                                                            <h:inputSecret style="width:100%;height:100%" value="#{gui_Userbearbeiten.password}" size="80" label="Password"></h:inputSecret>                                                      	 
+							</td>
+						</tr>
 						<tr>
 							<td>Rolle</td>   
 							<td>                                                                                                                        
