--- a/web/Ticket_Uebersicht_TutorAdmin.xhtml
+++ b/web/Ticket_Uebersicht_TutorAdmin.xhtml
@@ -182,9 +182,11 @@
 								</td>
                                                             
                                                                 <!-- Leerzeilen für Symbole -->
- 								<td>								
+ 								<td>
+                                                                <b>Löschen</b>
 								</td>
-								<td>								
+								<td>
+                                                                <b>Bearbeiten</b>    
 								</td>
 							</tr>
 						</thead>
