Debug Meldungen entfernt, Header angepasst, Tabellen angepasst

--- a/web/Ticket_Uebersicht_TutorAdmin.xhtml
+++ b/web/Ticket_Uebersicht_TutorAdmin.xhtml
@@ -180,7 +180,9 @@
 								<td>
 								<b>Status</b>
 								</td>
-                                                            
+                                                                <td>
+								<b>Benutzer</b>
+								</td>
                                                                 <!-- Leerzeilen für Symbole -->
  								<td>
                                                                 <b>Löschen</b>
