--- a/web/Landing Page_Tutor.xhtml
+++ b/web/Landing Page_Tutor.xhtml
@@ -55,6 +55,12 @@
                                                 <h3>Willkommen im Ticketsystem der IUBH-Fernstudium</h3><br/>
                                             </td>
                                         </tr>
+                                         <tr>
+                                            <td>
+                                                Bitte besuchen Sie die Ticketübersicht, um die zu bearbeitenden Tickets einzusehen. <br/>
+                                                Diese Ticketanwendung soll Ihnen helfen, schnell und einfach die Fragen der Studenten zu beantworten. <br/><br/>
+                                            </td>
+                                        </tr>                                        
                                         <tr>
                                             <td>
                                                 Sie haben eine Frage zur Funktion dieses Ticketsystems? Bitte werfen Sie einen Blick in das mitgelieferte Nutzerhandbuch. <br/>
