--- a/web/Landing Page.xhtml
+++ b/web/Landing Page.xhtml
@@ -56,6 +56,12 @@
                                                 <h3>Willkommen im Ticketsystem der IUBH-Fernstudium</h3><br/>
                                             </td>
                                         </tr>
+                                         <tr>
+                                            <td>
+                                                Sie haben Fragen zu einem Kurs oder einem allgemeinen Thema? <br/>
+                                                Diese Ticketanwendung soll Ihnen helfen, schnell und einfach mit den Mitarbeitern der IUBH-Fernstudium in Kontakt zu treten. <br/><br/>
+                                            </td>
+                                        </tr>
                                         <tr>
                                             <td>
                                                 Sie haben eine Frage zur Funktion dieses Ticketsystems? Bitte werfen Sie einen Blick in das mitgelieferte Nutzerhandbuch. <br/>
