--- a/web/UserErfassen.xhtml
+++ b/web/UserErfassen.xhtml
@@ -44,15 +44,11 @@
                                         <table width="100%" id="Menue">
                                             <tr>
                                                 <td>
-                                                <h:commandButton value="Übersicht" action="Landing Page.xhtml" class="button"></h:commandButton>
-                                                <div class="divider"/>
-                                                <h:commandButton value="Benutzerverwaltung" class="button"></h:commandButton>
-                                                <div class="divider"/>
-                                                <h:commandButton value="Ticketübersicht" class="button"></h:commandButton>
-                                                <div class="divider"/>
-                                                <h:commandButton value="Ticketerfassung" action="Erfassungsmaske_JSF?faces-redirect=true&amp;includeViewParams=true" class="button"></h:commandButton>                                                
+                                                    <h:commandButton value="Übersicht" action="Landing Page_Admin?faces-redirect=true&amp;includeViewParams=true" class="button"></h:commandButton>
+                                                <div class="divider"/>                                                
+                                                    <h:commandButton value="Benutzerverwaltung" action="User_Uebersicht?faces-redirect=true&amp;includeViewParams=true" class="button"></h:commandButton>
                                                 </td>                                    
-                                            </tr>
+                                            </tr>                                  
                                         </table>
  					<br/> <br/>					
 
