--- a/web/UserErfassen.xhtml
+++ b/web/UserErfassen.xhtml
@@ -65,7 +65,13 @@
 							<td>                                                             
                                                             <h:inputText style="width:100%;height:100%" value="#{gui_UserErfassen.email}" size="80" label="Email"></h:inputText>                                                      	 
 							</td>
-						</tr>								  
+						</tr>	
+						<tr>
+							<td width="15%" >Passwort</td> 
+							<td>                                                             
+                                                            <h:inputText style="width:100%;height:100%" value="#{gui_UserErfassen.password}" size="80" label="Email"></h:inputText>                                                      	 
+							</td>
+						</tr>	                                            
 						<tr>
 							<td>Rolle</td>   
 							<td>                                                                                                                        
