--- a/web/Erfassungsmaske_JSF.xhtml
+++ b/web/Erfassungsmaske_JSF.xhtml
@@ -47,9 +47,7 @@
                                                 <td>
                                                 <h:commandButton value="Übersicht" action="Landing Page.xhtml" class="button"></h:commandButton>
                                                 <div class="divider"/>
-                                                <h:commandButton value="Benutzerverwaltung" class="button"></h:commandButton>
-                                                <div class="divider"/>
-                                                <h:commandButton value="Ticketübersicht" class="button"></h:commandButton>
+                                                <h:commandButton value="Ticketübersicht" action="Ticket_Uebersicht_Student?faces-redirect=true&amp;includeViewParams=true"  class="button"></h:commandButton>
                                                 </td>
                                                                                       
                                             </tr>
