--- a/web/Ticket_Uebersicht_TutorAdmin.xhtml
+++ b/web/Ticket_Uebersicht_TutorAdmin.xhtml
@@ -45,12 +45,8 @@
                                         <table width="100%" id="Menue">
                                             <tr>
                                                 <td>
-                                                <h:commandButton value="Übersicht" action="Landing Page.xhtml" class="button"></h:commandButton>
-                                                <div class="divider"/>
-                                                <h:commandButton value="Benutzerverwaltung" class="button"></h:commandButton>
-                                                <div class="divider"/>
-                                                <h:commandButton value="Ticketerfassung" action="Erfassungsmaske_JSF?faces-redirect=true&amp;includeViewParams=true" class="button"></h:commandButton>                                                
-                                                </td>                                    
+                                                <h:commandButton value="Übersicht" action="Landing Page_Tutor.xhtml" class="button"></h:commandButton>   
+                                                </td>
                                             </tr>
                                         </table>
  					<br/> <br/>					
