--- a/web/Ticket_Uebersicht_TutorAdmin.xhtml
+++ b/web/Ticket_Uebersicht_TutorAdmin.xhtml
@@ -205,7 +205,8 @@
 								</td>
 								<td>
                                                                     <h:commandLink action="#{gui_TicketUebersichtTutor.EditTicket}">
-                                                                        <f:param name="TicketID" value="#{row[0]}"></f:param> 
+                                                                        <f:param name="TicketID" value="#{row[0]}"></f:param>
+                                                                        <f:param name="UsernameTemp" value="#{gui_TicketUebersichtTutor.username}"></f:param>
                                                                         <img src="edit_icon.png" alt="edit"/>
                                                                     </h:commandLink>
 								</td>
